Fix spacing on history ul elements

--- a/web/Mercury/app/app.css
+++ b/web/Mercury/app/app.css
@@ -117,6 +117,10 @@ ul.spaced-2 li {
     line-height: 200%;
 }
 
+ul.spaced-2 {
+    margin-bottom: 0px;
+}
+
 .striped {
     background-color: #f0f0f0;
 }
